--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -11,8 +11,8 @@
 # if you're sharing your code publicly.
 
 development:
-  admin_name: First User
-  admin_email: user@example.com
+  admin_name: David Campbell
+  admin_email: d.cam09@gmail.com
   admin_password: changeme
   email_provider_username: <%= ENV["SENDGRID_USERNAME"] %>
   email_provider_password: <%= ENV["SENDGRID_PASSWORD"] %>
