Add PostgreSQL as production database

--- a/.ebextenstions/ceti_sb.config
+++ b/.ebextenstions/ceti_sb.config
@@ -1,6 +1,11 @@
 # Configure third-party service credentials 
 # in environment variables:
 
+# .ebextensions/packages.config
+	packages:
+		yum:
+			postgresql-devel: []
+			
 # Run rake tasks before an application deployment
 container_commands:
 	01deploy:
