Type fix in ceti_sb.config

--- a/.ebextenstions/ceti_sb.config
+++ b/.ebextenstions/ceti_sb.config
@@ -5,10 +5,10 @@
 	packages:
 		yum:
 			postgresql-devel: []
-			
+
 # Run rake tasks before an application deployment
 container_commands:
 	01deploy:
-		command: rake db:schemas:load
+		command: rake db:schema:load
 		command: rake db:seed
 		command: rake sunspot:solr:start
