--- a/.ebextenstions/ceti_sb.config
+++ b/.ebextenstions/ceti_sb.config
@@ -2,13 +2,29 @@
 # in environment variables:
 
 # .ebextensions/packages.config
-	packages:
-		yum:
-			postgresql-devel: []
+#ebextensions:
+#	01settings.config:
+#		container_commands:
+#			01seed:
+#				command: rakedb:schema:load
+#				command: rake db:seed
+#	02commands.config:
+#		container_commands:
+#			01timezone:
+#				command: "ln -sf /usr/share/zoneinfo/America/Columbus /etc/localtime"
+
+#	03-ruby.config			
+#		packages:
+##			yum:
+#				git: []
+#				nodejs: []
+#				postgresql-devel: []
+#		commands:
+#			add_bundle_exec:
 
 # Run rake tasks before an application deployment
-container_commands:
-	01deploy:
-		command: rake db:schema:load
-		command: rake db:seed
-		command: rake sunspot:solr:start
+#container_commands:
+#	01deploy:
+#		command: rake db:schema:load
+#		command: rake db:seed
+#		command: rake sunspot:solr:start
