--- a/.ebextenstions/packages.config
+++ b/.ebextenstions/packages.config
@@ -1,6 +1,6 @@
-packages:
-  yum:
-    postgresql93-devel: []
+#packages:
+#  yum:
+#    postgresql93-devel: []
 
 #		commands:
 #			add_bundle_exec:
