--- a/.ebextensions/02solr.config
+++ b/.ebextensions/02solr.config
@@ -1,5 +1,5 @@
 container_commands:
   01deploy:
-    command rake db:schema:load
-    command rake db:seed
-    command rake sunspost:solr:start
+    command: rake db:schema:load
+    command: rake db:seed
+    command: rake sunspost:solr:start
