--- a/.ebextensions/02solr.config
+++ b/.ebextensions/02solr.config
@@ -2,4 +2,4 @@ container_commands:
   01deploy:
     command: rake db:schema:load
     command: rake db:seed
-    command: rake sunspot:solr:start
+    command: RAILS_ENV=production bundle exec rake sunspot:solr:start
