Separate Profiles from Accounts, Fix profile editing bugs

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ sc13prelim.txt
 school_data.txt
 school_data.txt~
 
+# Ignore Development ENV variables for emailer
+/config/initializers/app_env_vars.rb
+
 # various artifacts
 **.war
 *.rbc
