--- a/config/database.yml
+++ b/config/database.yml
@@ -31,3 +31,4 @@ production:
   password: <%= ENV['RDS_PASSWORD'] %>
   host: 	<%= ENV['RDS_HOSTNAME'] %>
   port: 	<%= ENV['RDS_PORT'] %>
+  region: <%= ENV['AWS_REGION'] %>
