--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -36,3 +36,4 @@ production:
   domain_name: <%= ENV["DOMAIN_NAME"] %>
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
   education_key: <%= ENV["EDUCATION_KEY"] %>
+  url_name: <%= ENV["URL"] %>
