Update production environment

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -30,7 +30,7 @@ production:
   admin_name: <%= ENV["ADMIN_NAME"] %>
   admin_email: <%= ENV["ADMIN_EMAIL"] %>
   admin_password: <%= ENV["ADMIN_PASSWORD"] %>
-  smtp_address: email-smtp.us-west-2.amazonaws.com
+  smtp_address: https://email-smtp.us-west-2.amazonaws.com
   email_provider_username: <%= ENV["SENDGRID_USERNAME"] %>
   email_provider_password: <%= ENV["SENDGRID_PASSWORD"] %>
   domain_name: <%= ENV["DOMAIN_NAME"] %>
