Update production environment

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -30,9 +30,9 @@ production:
   admin_name: <%= ENV["ADMIN_NAME"] %>
   admin_email: <%= ENV["ADMIN_EMAIL"] %>
   admin_password: <%= ENV["ADMIN_PASSWORD"] %>
-  smtp_address: https://email-smtp.us-west-2.amazonaws.com
-  email_provider_username: <%= ENV["SENDGRID_USERNAME"] %>
-  email_provider_password: <%= ENV["SENDGRID_PASSWORD"] %>
+  smtp_address: email-smtp.us-west-2.amazonaws.com
+  email_provider_username: <%= ENV["AWS_ACCESS_KEY"] %>#ENV["SENDGRID_USERNAME"] %>
+  email_provider_password: <%= ENV["AWS_SECRET_KEY"] %>#ENV["SENDGRID_PASSWORD"] %>
   domain_name: <%= ENV["DOMAIN_NAME"] %>
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
   education_key: <%= ENV["EDUCATION_KEY"] %>
