--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -33,7 +33,7 @@ production:
   smtp_address: email-smtp.us-west-2.amazonaws.com
   email_provider_username: <%= ENV["SENDGRID_USERNAME"] %>#ENV["AWS_ACCESS_KEY"] %>#
   email_provider_password: <%= ENV["SENDGRID_PASSWORD"] %>#ENV["AWS_SECRET_KEY"] %>#
-  domain_name: gmail.com #<%= ENV["DOMAIN_NAME"] %>
+  domain_name: gmail.com
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
   education_key: <%= ENV["EDUCATION_KEY"] %>
   url_name: <%= ENV["URL"] %>
