Update claims handling for an event, remove logic from events.rb

--- a/.ebextensions/02solr.config
+++ b/.ebextensions/02solr.config
@@ -3,3 +3,4 @@ container_commands:
     command: rake db:schema:load
     command: rake db:seed
     command: RAILS_ENV=production bundle exec rake sunspot:solr:start
+    command: whenever -i
