--- a/.ebextensions/02solr.config
+++ b/.ebextensions/02solr.config
@@ -1,6 +1,6 @@
 container_commands:
   01deploy:
-    command: rake db:schema:load
-    command: rake db:seed
-    command: RAILS_ENV=production bundle exec rake sunspot:solr:start
-    command: whenever -i
+    command: "rake db:schema:load"
+    command: "rake db:seed"
+    command: "RAILS_ENV=production bundle exec rake sunspot:solr:start"
+    command: "whenever -i"
