Update .gitignore to ignore swaps

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,10 @@ sc13prelim.txt
 school_data.txt
 school_data.txt~
 
+#ignore swaps
+*.swo
+*.swp
+
 # Ignore Development ENV variables for emailer
 /config/initializers/app_env_vars.rb
 
