--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -21,3 +21,9 @@ admin:
   email: other@gmail.com
   encrypted_password: <%= Devise.bcrypt(User, '87654321') %>
   role: Admin
+
+david:
+  name: David
+  email: david@gmail.com
+  encrypted_password: <%= Devise.bcrypt(User, 'password') %>
+  role: Both
