Adding claims to test files

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -27,3 +27,9 @@ david:
   email: david@gmail.com
   encrypted_password: <%= Devise.bcrypt(User, 'password') %>
   role: Both
+
+test:
+  name: Tester
+  email: test@example.com
+  encrypted_password: <%= Devise.bcrypt(User, 'password')%>
+  role: Both
