Update claims tests

--- a/test/fixtures/claims.yml
+++ b/test/fixtures/claims.yml
@@ -12,3 +12,11 @@ rejected:
 active:
   user: speaker
   event: one
+
+cancel_me:
+  user: both
+  event: one
+
+reject_me:
+  user: test
+  event: one
