--- a/.ebextensions/03init_whenever.config
+++ b/.ebextensions/03init_whenever.config
@@ -1,27 +1,27 @@
 commands:
-	create_post_dir:
-		command: "mkdir /opt/elasticbeanstalk/hooks/appdeploy/post"
-		ignoreErrors: true
-	files:
-		"/opt/elasticbeanstalk/hooks/appdeploy/post/03_restart_whenever.sh":
-			mode: "000755"
-			owner: root
-			group: root
-			content: |
-				#!/usr/bin/bash/env bash
+  create_post_dir:
+    command: "mkdir /opt/elasticbeanstalk/hooks/appdeploy/post"
+    ignoreErrors: true
+files:
+  "/opt/elasticbeanstalk/hooks/appdeploy/post/03_restart_whenever.sh":
+    mode: "000755"
+    owner: root
+    group: root
+    content: |
+      #!/usr/bin/env bash
 
-				# Load environment data
-				EB_SCRIPT_DIR=$(/opt/elasticbeanstalk/bin/get-config container -k script_dir)
-				EB_SUPPORT_DIR=$(/opt/elasticbeanstalk/bin/get-config container -k support_dir)
-				EB_APP_USER=$(/opt/elasticbeanstalk/bin/get-config container -k app_user)
-				EB_APP_CURRENT_DIR=$(/opt/elasticbeanstalk/bin/get-config container -k app_deploy_dir)
-				EB_APP_PIDS_DIR=$(/opt/elasticbeanstalk/bin/get-config container -k app_pid_dir)
+      # Load environment data
+      EB_SCRIPT_DIR=$(/opt/elasticbeanstalk/bin/get-config container -k script_dir)
+      EB_SUPPORT_DIR=$(/opt/elasticbeanstalk/bin/get-config container -k support_dir)
+      EB_APP_USER=$(/opt/elasticbeanstalk/bin/get-config container -k app_user)
+      EB_APP_CURRENT_DIR=$(/opt/elasticbeanstalk/bin/get-config container -k app_deploy_dir)
+      EB_APP_PIDS_DIR=$(/opt/elasticbeanstalk/bin/get-config container -k app_pid_dir)
 
-				# Setting up correct environment and ruby version so that bundle can load all gems
-				. $EB_SUPPORT_DIR/envvars
-				. $EB_SCRIPT_DIR/use-app-ruby.sh
+      # Setting up correct environment and ruby version so that bundle can load all gems
+      . $EB_SUPPORT_DIR/envvars
+      . $EB_SCRIPT_DIR/use-app-ruby.sh
 
-				# Start whenever
-				EB_APP_CURRENT_DIR=$(/opt/elasticbeanstalk/bin/get-config container -k app_deploy_dir)
-				cd $EB_APP_CURRENT_DIR
-				whenever -i
+      # Start whenever
+      EB_APP_CURRENT_DIR=$(/opt/elasticbeanstalk/bin/get-config container -k app_deploy_dir)
+      cd $EB_APP_CURRENT_DIR
+      whenever -i
